[package]
name = "metconst-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["tokio"] }
ips = "0.1.0"
regex = "1.10.2"
reqwest = "0.11.22"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
sanitise-file-name = "1.0.0"
scraper = "0.18.1"
tokio = { version = "1.33.0", features = ["full"] }
walkdir = "2.4.0"
zip = "0.6.6"

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
